--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,8 +48,12 @@ bytes = "1.0.1"
 clap = "2.33.0"
 dashmap = "4.0.2"
 either = "1.6.1"
+futures = "0.3.16"
+humantime-serde = "1.0.0"
 hyper = "0.14.2"
+itertools = "0.10.1"
 num_cpus = "1.13.0"
+once_cell = "1.8.0"
 parking_lot = "0.11.0"
 prometheus = { version = "0.12", default-features = false }
 prost = "0.8.0"
@@ -63,11 +67,11 @@ slog-async = "2.6.0"
 slog-json = "2.3.0"
 slog-term = "2.5.0"
 snap = "1.0.3"
+thiserror = "1.0.25"
 tokio = { version = "1.8.2", features = ["rt-multi-thread", "signal", "test-util", "parking_lot"] }
 tokio-stream = "0.1.2"
 tonic = "0.5.0"
 uuid = {version = "0.8.1", default-features = false, features = ["v4"]}
-thiserror = "1.0.25"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sys-info = "0.9.0"
@@ -77,6 +81,7 @@ reqwest = "0.11.0"
 regex = "1.3.9"
 criterion = { version = "0.3", features = ["html_reports"] }
 once_cell = "1.8.0"
+assert_cmd = "2.0.0"
 
 [build-dependencies]
 tonic-build = { version = "0.5.1", default_features = false, features = ["transport", "prost"] }
