--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,6 @@ bytes = "1.0.1"
 clap = "2.33.0"
 dashmap = "4.0.2"
 either = "1.6.1"
-futures = "0.3.16"
 humantime-serde = "1.0.0"
 hyper = "0.14.2"
 itertools = "0.10.1"
@@ -72,6 +71,8 @@ tokio = { version = "1.8.2", features = ["rt-multi-thread", "signal", "test-util
 tokio-stream = "0.1.2"
 tonic = "0.5.0"
 uuid = {version = "0.8.1", default-features = false, features = ["v4"]}
+socket2 = { version = "0.4.2", features = ["all"] }
+futures = "0.3.17"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 sys-info = "0.9.0"
